<?xml version="1.0"?>
<package format="3">
  <name>noble_ros_gz_bridge</name>
  <version>0.1.0</version>
  <description>Advanced custom bridge between ROS 2 Jazzy and Gazebo (Ignition/Ionic).</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>ros_gz_bridge</depend>
  <exec_depend>gazebo</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
